# News-Aggregator-Agent

./: Planning.md  pyproject.toml
app/: main.py
app/scraper/: youtube_rss.py
app/services/: youtube_transcript.py
